Updates to v0.7